Remove struct eval from the language.
It's value is greatly diminished now that we officially support variable
shadowing and have modules. No reason to keep it around in the language
anymore.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-* [lang] Remove struct eval. Perhaps replace with struct import?
+* [clean] Remove remnants of struct eval support.
 
 * [prgm] TicTacToe cleanup
  - Switch to using shared modules.
