Start work on tictactoe ai program.
It can print a board, position, and result. For now it just prints a dummy
board position and result.

--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -1197,3 +1197,4 @@ Notes:
    you can write:
      ${ a:= ...; b := ...; TestResult@(a, b); }
    
+- Should we change 'put' to return Unit? It just seems simpler, no?
