--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -1198,3 +1198,5 @@ Notes:
      ${ a:= ...; b := ...; TestResult@(a, b); }
    
 - Should we change 'put' to return Unit? It just seems simpler, no?
+- Mixing folds and maps and processes seqs is annoying. Can we come up with
+  better libraries for doing that sort of thing easily?
