--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
 The Great Cleanup:
-* [lang] Switch put to return Unit instead of its input argument?
 * [prgm] Have TicTacToe print its own board and such rather than need a custom
   fble-tictactoe.c program to drive it.
+* [lang] Read through langs/fble.txt and make sure it is up to date with the
+  latest syntax, etc.
 * [prgm] Split TicTacToe implementation up into different modules
   - Game, AI, UI, Test, etc. And clean up the code in the process as much as
     possible.
